# CBaseStruct

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  main.h
src/BuilderEven/: CMakeLists.txt  DeclspecDll.h
src/DataStruct/: .gitignore  CMakeLists.txt  DataStruct.c  DataStruct.h  ExternDataStruct.h
src/Sqlite/: CMakeLists.txt  sqlite.h
